Nav link alignment fixes

--- a/source/css/langSelector.css
+++ b/source/css/langSelector.css
@@ -77,4 +77,4 @@ a {
 
 
 .marketplace #lang-block {
-    margin-top: 6px;
+    margin-top: 7px;
