--- a/source/en/asset/css/common.css
+++ b/source/en/asset/css/common.css
@@ -691,19 +691,16 @@ section > h2 > img {
 
 
 .btn.user-signin {
-  font-size: .8125em;
-  line-height: 1.84615em;
-  border-width: 1px;
-
-  text-shadow: none;
-
-  background: none;
-  color: #007ac2;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  text-transform: none;
-  padding: 0.3em 1.8em 0.2em !important;
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    border: medium none;
+    border-radius: 0;
+    box-shadow: none;
+    box-sizing: unset;
+    display: block;
+    line-height: unset;
+    margin-top: 1px;
+    text-shadow: none;
+    text-transform: none;
 }
 
 .user-signin > img {
@@ -774,7 +771,7 @@ ul ol li {
 
 #header .btn.user-signin, #header .dropdown.btn.user-signin, #header .btn.marketplace, #header .dropdown.btn.marketplace {
     color: #323232;
-    padding: 0 1.6em !important;
+    /*padding: 0 1.6em !important;*/
 }
 
 #lgarrow.arrow-down {
